--- a/.github/workflows/test_tweet.yml
+++ b/.github/workflows/test_tweet.yml
@@ -1,8 +1,11 @@
 name: Test tweet
 on:
-  pull_request:
+  push:
     branches:
       - master
+  # pull_request:
+  #   branches:
+  #     - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -25,4 +28,4 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
-          python tweet_test.py --tweet '#SMFORST' --name stats/smforst/Daily/stats
+          python tweet_test.py --tweet '#SMFORST' --name stats/smforst/Daily/stats --mention '@openmapping_ap'
