--- a/.github/workflows/test_tweet.yml
+++ b/.github/workflows/test_tweet.yml
@@ -28,4 +28,4 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
-          python tweet_test.py --tweet '#SMFORST' --name stats/smforst/Daily/stats --mention '@openmapping_ap'
+          python tweet_test.py --tweet '#TürkiyeEQ060223' --name stats/turkeyeq/Daily/stats --mention '@hotosm'
