--- a/.github/workflows/weekly_global.yml
+++ b/.github/workflows/weekly_global.yml
@@ -68,7 +68,7 @@ jobs:
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_week --tweet_global --git $commit_id
           
-          sudo mv summary.md $base_dir/README.md
+          sudo mv stats_summary.md $base_dir/README.md
           
           git add -f $base_dir/README.md
           
