--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -71,7 +71,7 @@ jobs:
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_week  --tweet_nepal --git $commit_id
           
-          sudo mv summary.md $base_dir/README.md
+          sudo mv stats_summary.md $base_dir/README.md
           
           git add -f $base_dir/README.md
           git commit -m "Updated Readme Weekly Nepal"
