--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -30,7 +30,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --changeset --summary --charts  --meta
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats/Global/Daily/stats --all_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --changeset --summary --charts  --meta
 
       - name: add stats to git
 
@@ -40,17 +40,9 @@ jobs:
           git config --global user.name "kshitijrajsharma"
           base_dir=stats/Global/Daily
 
-          mv stats_summary.csv $base_dir/
-          cp *.csv $base_dir/stats.csv
-          cp *.png $base_dir/charts/
-          cp stats_summary.md $base_dir/README.md
-          cp stats_metadata.json $base_dir/stats_metadata.json
-
-          git add -f $base_dir/stats.csv
-          git add -f $base_dir/stats_metadata.json
-          git add -f $base_dir/charts/
-          git add -f $base_dir/README.md
-
+          mkdir -p $base_dir
+          mv $base_dir/stats_summary.md $base_dir/Readme.md
+          git add -f $base_dir/*
 
           git commit -m "Updated Daily global stats"
           git push
@@ -63,14 +55,6 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
-          base_dir=stats/Global/Daily
-
           commit_id=$(git rev-parse --short HEAD)
-          python tweet.py --tweet_last_day --tweet_global --git $commit_id
+          python tweet.py --git $commit_id --name stats/Global/Daily/stats --tweet 'Global Last Day' --mention '@openstreetmap'
 
-          sudo mv summary.md $base_dir/README.md
-
-          git add -f $base_dir/README.md
-
-          git commit -m "Updated Readme Daily Global"
-          git push
