--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -2,9 +2,9 @@ name: Run Weekly Report Nepal
 on:
   schedule:
     - cron: "0 3 * * MON" # Run every Monday
-  push:
-   branches:
-    - master
+  # push:
+  #  branches:
+  #   - master
 jobs:
   issue:
     runs-on: ubuntu-latest
@@ -59,5 +59,5 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
           commit_id=$(git rev-parse --short HEAD)
-          python tweet.py --git $commit_id --name stats/Nepal/Weekly/stats --tweet 'Nepal Last Week'
+          python tweet_test.py --git $commit_id --name stats/Nepal/Weekly/stats --tweet 'Nepal Last Week'
 
