--- a/.github/workflows/monthly_hotosm.yml
+++ b/.github/workflows/monthly_hotosm.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Generate Monthly Hashtag Stats
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/hotosm/Monthly/stats_metadata.json --hashtags hotosm --force --charts --summary --workers 8  --meta
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats/hotosm/Monthly/stats --all_tags --read_from_metadata stats/hotosm/Monthly/stats_metadata.json --hashtags hotosm --force --charts --summary --workers 8  --meta
 
       - name: add stats to git
 
@@ -37,18 +37,10 @@ jobs:
           git config --global user.name "kshitijrajsharma"
 
           base_dir=stats/hotosm/Monthly
-          mkdir -p $base_dir/charts/
 
-          mv stats_summary.csv $base_dir/
-          cp *.csv $base_dir/stats.csv
-          cp *.png $base_dir/charts/
-          cp stats_summary.md $base_dir/README.md
-          cp stats_metadata.json $base_dir/stats_metadata.json
-
-          git add -f $base_dir/stats.csv
-          git add -f $base_dir/stats_metadata.json
-          git add -f $base_dir/charts/
-          git add -f $base_dir/README.md
+          mkdir -p $base_dir
+          mv $base_dir/stats_summary.md $base_dir/Readme.md
+          git add -f $base_dir/*
 
           git commit -m "Updated Monthly hotosm stats"
           git push
@@ -62,12 +54,4 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
           commit_id=$(git rev-parse --short HEAD)
-          python tweet.py --tweet_hotosm --tweet_last_month --git $commit_id
-          base_dir=stats/hotosm/Monthly
-
-          sudo mv summary.md $base_dir/README.md
-
-          git add -f $base_dir/README.md
-
-          git commit -m "Updated Readme Monthly Hotosm"
-          git push
+          python tweet.py --git $commit_id --name stats/hotosm/Monthly/stats --tweet 'HOTOSM Last Month' --mention '@hotosm'
