--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -56,5 +56,5 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
           commit_id=$(git rev-parse --short HEAD)
-          python tweet_test.py --git $commit_id --name stats/Global/Daily/stats --tweet 'Global Last Day' --mention '@openstreetmap'
+          python tweet.py --git $commit_id --name stats/Global/Daily/stats --tweet 'Global Last Day' --mention '@openstreetmap'
 
