--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -59,5 +59,5 @@ jobs:
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
           commit_id=$(git rev-parse --short HEAD)
-          python tweet_test.py --git $commit_id --name stats/Nepal/Weekly/stats --tweet 'Nepal Last Week'
+          python tweet.py --git $commit_id --name stats/Nepal/Weekly/stats --tweet 'Nepal Last Week'
 
