--- a/.github/workflows/daily_hotosm.yml
+++ b/.github/workflows/daily_hotosm.yml
@@ -55,5 +55,5 @@ jobs:
         run: |
 
           commit_id=$(git rev-parse --short HEAD)
-          python tweet.py --git $commit_id --name stats/hotosm/Daily/stats --tweet  'HOTOSM Last Day' --mention '@hotosm'
+          python tweet.py --git $commit_id --name stats/hotosm/Daily/stats --tweet 'Tasking Manager Last Day' --mention '@hotosm'
 
