--- a/.github/workflows/weekly_global.yml
+++ b/.github/workflows/weekly_global.yml
@@ -57,6 +57,6 @@ jobs:
         run: |
 
           commit_id=$(git rev-parse --short HEAD)
-          python tweet.py --git $commit_id --name stats/Global/Weekly/stats --tweet 'Global Last Week' --mention '@openstreetmap'
+          python tweet.py --git $commit_id --name stats/Global/Weekly/stats --tweet 'OSM Last Week' --mention '@openstreetmap'
           
 
