--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -31,7 +31,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats/turkeyeq/Daily/stats --all_tags --hashtags TürkiyeEQ060223 --charts --summary --length highway --update --name stats/turkeyeq/Daily/stats --force
+          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats/turkeyeq/Daily/stats --all_tags --hashtags TürkiyeEQ060223 --charts --summary --length highway --update --name stats/turkeyeq/Daily/stats --force --tm_stats
 
       - name: add stats to git
 
