--- a/.github/workflows/daily_ogasiapacific.yml
+++ b/.github/workflows/daily_ogasiapacific.yml
@@ -2,14 +2,16 @@ name: Run Daily Report OGAsiaPacific Hashtag
 on:
   schedule:
     - cron: "0 3 * * *" # Run every day at 3 UTC
-    
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.8
-        uses: actions/setup-python@v1requirements
+        uses: actions/setup-python@v1
         with:
           python-version: 3.8
 
