--- a/.github/workflows/daily_ogasiapacific.yml
+++ b/.github/workflows/daily_ogasiapacific.yml
@@ -2,9 +2,9 @@ name: Run Daily Report OGAsiaPacific Hashtag
 on:
   schedule:
     - cron: "0 3 * * *" # Run every day at 3 UTC
-  push:
-    branches:
-      - master
+#   push:
+#     branches:
+#       - master
 jobs:
   issue:
     runs-on: ubuntu-latest
