--- a/.github/workflows/monthly_global.yml
+++ b/.github/workflows/monthly_global.yml
@@ -35,7 +35,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats/Global/Monthly/stats --read_from_metadata stats/Global/Monthly/stats_metadata.json --all_tags --charts --summary  --meta
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats/Global/Monthly/stats --read_from_metadata stats/Global/Monthly/stats_metadata.json --all_tags --charts --summary  --meta --temp
 
       - name: add stats to git
 
@@ -63,4 +63,3 @@ jobs:
         run: |
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --git $commit_id --name stats/Global/Monthly/stats --tweet 'OSM Last Month' --mention '@openstreetmap'
-
