feat: Turkey Data and Frontend Integration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.7.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
