Ignore tweet stats failed

--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -48,6 +48,7 @@ jobs:
           git push
 
       - name: Tweet Stats
+        continue-on-error: true
         env: #assign variables
           API_KEY: ${{ secrets.API_KEY }}
           API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
