Continue on error

--- a/.github/workflows/daily_mapherworld.yml
+++ b/.github/workflows/daily_mapherworld.yml
@@ -40,6 +40,7 @@ jobs:
           git commit -m "Updated Daily mapherworld stats"
           git push
       - name : Tweet stats
+        continue-on-error: true
         env: #assign variables
           API_KEY: ${{ secrets.API_KEY }}
           API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
