--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           node-version: "16"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-          working-directory: ./frontend
+          cache-dependency-path: './frontend'
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
