--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./out
+          path: out
 
   # Deployment job
   deploy:
