--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -30,7 +30,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: test package
-        run: pip show osmsg
+        run: |
+          pip show osmsg
+          virtualenv --version
 
       - name: Generate Last hour stats
         env: #assign variables
