osmsg help print

--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -22,12 +22,6 @@ jobs:
       - name: Install Osmium
         run: sudo apt-get install -y osmium-tool
 
-      - name: Install virtualenv
-        run: |
-          pip install virtualenv 
-          virtualenv env 
-          source env/bin/activate
-
       - name: Install necessary dependecies
         run: |
           pip install flare-floss
@@ -38,6 +32,7 @@ jobs:
       - name: Show osmsg
         run: |
           pip show osmsg
+          osmsg --help
 
       - name: Generate Last hour stats
         env: #assign variables
