--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -11,7 +11,7 @@ on:
       - master
 jobs:
   issue:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.11
