Do n't build right now

--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Install necessary dependecies
         run: |
+          pip install --upgrade pip
           pip install flare-floss
           pip install -e . 
           pip install tweepy
