--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Show osmsg
         run: |
-          pip install setup.py
+          python setup.py install
           pip show osmsg
           ls /opt/hostedtoolcache/Python/3.11.6/x64/lib/python3.11/site-packages/
 
