--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -29,11 +29,9 @@ jobs:
           pip install tweepy
           pip install -r requirements.txt
 
-      - name: Show osmsg
+      - name: Install osmsg
         run: |
           python setup.py install
-          pip show osmsg
-          ls /opt/hostedtoolcache/Python/3.11.6/x64/lib/python3.11/site-packages/
 
       - name: Generate Last hour stats
         env: #assign variables
